@@ -1,3 +1,10 @@
+2004-07-19  Rodney Dawes  <dobey@novell.com>
+
+	* gnome-wp-item.c (gnome_wp_remove_wallpaper, gnome_wp_list_sort):
+	Free what we get with gtk_tree_model_get
+
+	Fixes #147403
+
 2004-05-14  Muktha Narayan <muktha.narayan@wipro.com>
 
 	* gnome-wp-capplet.c (set_accessible_name): New
